@@ -1,3 +1,0 @@
-
-  # cat=basic; type=# cat=basic; type=user[EXT:static_info_tables/classes/class.tx_staticinfotables_emconfhelper.php:tx_staticinfotables_emconfhelper->buildCharsetField]; label=charset: Specify the charset of the tables in the database. Enter here the same charset you have used with the Update script. Always utf-8 for TYPO3 4.7+.
-charset = utf-8
